add digifolio page

--- a/index.html
+++ b/index.html
@@ -1,330 +1,1 @@
-<!DOCTYPE html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            margin: 0 auto;
-            max-width: 34cm;
-            font-family: Calibri, sans-serif;
-        }
-
-        a,
-        a:active {
-            color: white;
-            text-decoration: none;
-        }
-
-        span {
-            color: gray;
-        }
-
-        #row {
-            text-align: right;
-        }
-
-        #left,
-        #right {
-            display: inline-block;
-            position: relative;
-        }
-
-        #left {
-            position: fixed;
-            top: 0;
-            left: 0;
-            overflow-y: scroll;
-            width: 25%;
-            height: 100%;
-            font-size: 0.9em;
-            text-align: left;
-            background-color: #2c3e50;
-            color: white;
-        }
-
-        #left div,
-        #right div {
-            padding: 5px 30px;
-        }
-
-        #right {
-            width: 70%;
-            overflow: hidden;
-            text-align: left;
-        }
-
-        #profile {
-            position: absolute;
-            width: 90%;
-            max-width: 768px;
-            text-align: right
-        }
-
-        #profile img {
-            width: 100%;
-            height: auto;
-            max-width: 180px;
-            padding: 20px 10px;
-        }
-
-        @media only screen and (max-width: 768px) {
-            #left {
-                position: static;
-                overflow-y: initial;
-            }
-
-            #profile {
-                position: static;
-                display: block;
-                text-align: center;
-            }
-
-            #left,
-            #right {
-                display: block;
-                width: initial;
-                height: initial;
-            }
-        }
-
-        @media print {
-            #left {
-                position: static;
-                display: block;
-                width: initial;
-                overflow-y: initial;
-                color: black;
-            }
-
-            #right{
-                display: block;
-                width: initial;
-            }
-
-            a {
-                color: black
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div id="row">
-        <div id="right">
-            <div id="profile">
-                <img src="who.png">
-            </div>
-            <div>
-                <h1>Marvin Mitchell</h1>
-                <p>Senior Backend Engineer at Tunaiku </p>
-                <p><span>West Java Province, Indonesia</span></p>
-            </div>
-            <div>
-                <h3>Summary</h3>
-                <p>
-                    I love technologies and actively been doing software development since 2012. I also loves to play
-                    game and do game development for hobby.
-                </p>
-                <p>
-                    I can do mobile development using react native, pure native, or ionic.
-                    I am familiar with aws technologies such as aws s3, dynamodb, or
-                    aws ec2. I also familiar with firebase as mobile and web application
-                    development platform.
-                </p>
-                <p>
-                    I have a good grasp of blockchain technology and can create a
-                    smart contract using solidity language. I also can do web app
-                    development using php framework like laravel, code igniter, and
-                    javascript frontend library like react.js or vue.js.
-                </p>
-                <p>
-                    I can design and create backend system. As a senior backend
-                    developer, I am experienced in java(spring), php(CI / lumen / native),
-                    javascript(nodejs), python(django), golang, and ruby on rails
-                </p>
-                <p>
-                    Even though in my last job I am a senior backend developer, I was
-                    the scrum master as well. I also did several recruitment prosecess as
-                    the interviewer.
-                </p>
-            </div>
-            <div>
-                <h3>Experience</h3>
-
-                <p>
-                    <b>Tunaiku</b><br>
-                    Senior Backend Engineer<br>
-                    April 2019 - Present<br>
-                    <span>Greater Jakarta Area, Indonesia</span>
-                </p>
-                <p>
-                    At tunaiku, I work as a Senior Backend Engineer. I heavily work with golang
-                    here to create api for the mobile apps and web apps
-                </p>
-                <div></div>
-
-                <p>
-                    <b>Various projects and various online freelance works</b><br>
-                    Professional Freelancer<br>
-                    June 2012 - Present<br>
-                    <span>Greater Jakarta Area, Indonesia</span>
-                </p>
-                <p>
-                    My basis is a freelancer. I've done several online freelance and contract based
-                    projects. Below are several example of projects that I've done :
-                </p>
-                <ol>
-                    <li>
-                        Qazwa (Apr 2018 – Jul 2018)
-                        <p>
-                            Qazwa is an online sharia financing platform that facilitates people to be able
-                            to provide financing.<br><br>
-                            I act as the backend engineer in this project. I use lumen, which is a php
-                            framework to create the required Apis.<br><br>
-                            I work with 1 front end engineer, 2 UI UX designers, 2 testers, and 1 Project
-                            Manager. The website front end were created using nuxt, which is a javascript
-                            frontend frame work with extra state management capabilities
-                        </p>
-                    </li>
-                    <li>
-                        Tektaya (Oct 2014 – Dec 2015)
-                        <p>
-                            Tektaya is a Payment Point Online Bank (PPOB) android app to pay bills
-                            like electricity and other bills. In this project, I act as the full stack developer
-                            handling the backend and the front end aspect of the development.<br><br>
-                            I work with 3 UI UX designer and one of my teammate handling the budget of
-                            the development. This project is heavily using ISO8583 for online transactions
-                            and communications
-                        </p>
-                    </li>
-                    <li>
-                        Backend for Inventory Management (Feb 2015 – Apr 2015)
-                        <p>
-                            I've created Inventory Management System backend for the Gunadarma
-                            university, which is the university I get my degree from.<br><br>
-                            I've created the backend service for the Inventory Management System using
-                            a python framework called Django. All the data are stored in a database, using
-                            PostgreSQL as the RDBMS
-                        </p>
-                    </li>
-                    <li>
-                        Website Development for Robert Baker Furniture (Mar 2016 – Aug 2016)
-                        <p>
-                            I created a website for Robert Baker Furniture. Which is a furniture company
-                            which has integrated specialization in the design and concept, manufacture
-                            and assembly, wholesale and retail sales.<br><br>
-                            Those are several examples of projects that I've done. I also do freelance
-                            projects online and sometimes I do a project for my own because I love
-                            technologies.
-                        </p>
-                    </li>
-                </ol>
-                <div></div>
-
-                <p>
-                    <b>Dattabot</b><br>
-                    Senior Backend Engineer<br>
-                    Augustus 2018 - April 2019<br>
-                    <span>Greater Jakarta Area, Indonesia</span>
-                </p>
-                <p>
-                    In Dattabot, I work as a Senior Backend Engineer. I heavily work with
-                    serverless technology provided by AWS lambda and I use javascript (Node.js)
-                    as to create the serverless apis.
-                </p>
-                <p>
-                    I am familiar with AWS technologies like AWS S3, AWS EC2, AWS Auora,
-                    RDS, etc
-                </p>
-                <div></div>
-
-                <p>
-                    <b>Telkom</b><br>
-                    Senior Software Engineer<br>
-                    May 2016 -July 2018<br>
-                    <span>Greater Jakarta Area, Indonesia</span>
-                </p>
-                <p>
-                    In telkom, I created backend services for Qren. Qren is a service that connects
-                    sellers (Merchants) with payment tool issuers (Issuer) to make payments on a
-                    mobile basis by using QR code.
-                </p>
-                <p>
-                    I use Java J2ee technology to create the backend services. I used Wildfly as
-                    the application server and deploy to project to openshift.
-                </p>
-                <p>
-                    In this company, I am the scrum master of the team and become the assistant
-                    of my manager to do interviewing process towards new job applicants
-                </p>
-                <div></div>
-            </div>
-
-            <div>
-                <h3>Education</h3>
-                <p>Universitas Gunadarma</p>
-                <p>Master's degree, Management Information Systems,  (2015 - 2017)</p>
-                <div></div>
-                <p>Universitas Gunadarma</p>
-                <p>Bachelor of Technology - BTech, Information Technology, (2011 - 2015)</p>
-            </div>
-        </div>
-        <div id="left">
-            <div>
-                <h3>Contact</h3>
-                <p><a href="mailto:marvin.mitchell.zwakenberg@gmail.com?Subject=Hello%20again"
-                        target="_top">marvin.mitchell. zwakenberg@gmail.com</a></p>
-                <p><a
-                        href="https://www.linkedin.com/in/marvin-mitchell-26762217b?jobid=1234&lipi=urn%3Ali%3Apage%3Ad_jobs_easyapply_pdfgenresume%3Bpi4GPxlcRMmPIbhU5ItWPg%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_jobs_easyapply_pdfgenresume-v02_profile">www.linkedin.com/in/marvin-mitchell-26762217b<span>(LinkedIn)</span>
-                    </a></p>
-            </div>
-            <div>
-                <h3>Top Skills</h3>
-                <p>Full-Stack Development</p>
-                <p>Mobile Application Development</p>
-                <p>Back-End Development</p>
-            </div>
-            <div>
-                <h3>Technical Skills</h3>
-                <p>
-                    Programming
-                    <ul>
-                        <li>Ada</li>
-                        <li>C / C++</li>
-                        <li>Golang</li>
-                        <li>Java</li>
-                        <li>Web Programming(Html5, CSS, Javascript)</li>
-                        <li>Php</li>
-                        <li>Perl</li>
-                        <li>Python</li>
-                        <li>Ruby</li>
-                        <li>Scala</li>
-                    </ul>
-                </p>
-                <p>
-                    Interpersonal
-                    <ul>
-                        <li>Team Leadership</li>
-                        <li>Teamwork</li>
-                        <li>Team Building</li>
-                        <li>Team Management</li>
-                    </ul>
-                </p>
-            </div>
-            <div>
-                <h3>
-                    Languages
-                </h3>
-                <p>Indonesian <span>(Native or Bilingual)</span></p>
-                <p>English <span>(Professional Working)</span></p>
-            </div>
-            <div>
-                <h3>
-                    Honors-Awards
-                </h3>
-                <p>First Place in Android Development Competition</p>
-                <p>Web App Development Competition Finalist</p>
-            </div>
-        </div>
-    </div>
-</body>
+<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="vendors-49d0a293.js"></script><script defer="defer" src="vendors-7a2540e5.js"></script><script defer="defer" src="vendors-23e2a055.js"></script><script defer="defer" src="vendors-e7d3bc8e.js"></script><script defer="defer" src="vendors-58465378.js"></script><script defer="defer" src="vendors-8cf99358.js"></script><script defer="defer" src="vendors-f92f78ac.js"></script><script defer="defer" src="vendors-c605cc12.js"></script><script defer="defer" src="vendors-f8d75dad.js"></script><script defer="defer" src="vendors-5d86a222.js"></script><script defer="defer" src="vendors-2b4151f8.js"></script><script defer="defer" src="vendors-712bd2d8.js"></script><script defer="defer" src="vendors-0bc0478e.js"></script><script defer="defer" src="vendors-b48beae3.js"></script><script defer="defer" src="vendors-af292161.js"></script><script defer="defer" src="vendors-7689a923.js"></script><script defer="defer" src="vendors-e5bca7e4.js"></script><script defer="defer" src="vendors-49ceb22a.js"></script><script defer="defer" src="vendors-229eafb5.js"></script><script defer="defer" src="main.js"></script></head><body></body></html>
